--- a/slides/02-slr.qmd
+++ b/slides/02-slr.qmd
@@ -13,6 +13,9 @@ format:
     slide-number: true
     incremental: false 
     chalkboard: true
+html-math-method:
+  method: mathjax
+  url: "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
 execute:
   freeze: auto
   echo: true
@@ -466,7 +469,9 @@ Suppose that a movie has a critics score of 70. According to this model, what is
 
 ## Fit the model
 
-We use the `lm()` function to fit a linear regression model
+Use the `lm()` function to fit a linear regression model
+
+<br>
 
 ```{r}
 movie_fit <- lm(audience ~ critics, data = movie_scores)
@@ -475,7 +480,9 @@ movie_fit
 
 ## Tidy results
 
-We use the `tidy()` function from the **broom** R package to "tidy" the data.
+Use the `tidy()` function from the **broom** R package to "tidy" the data
+
+<br>
 
 ```{r}
 #| code-line-numbers: "|2"
@@ -484,6 +491,10 @@ tidy(movie_fit)
 ```
 
 ## Format results
+
+Use the `kable()` function from the **knitr** package to neatly format the results
+
+<br>
 
 <div>
 
@@ -497,6 +508,10 @@ tidy(movie_fit) |>
 </div>
 
 ## Prediction
+
+Use the `predict()` function to calculate predictions for new observations
+
+<br>
 
 **Single observation**
 
