--- a/overview.qmd
+++ b/overview.qmd
@@ -43,7 +43,7 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 +---------------+----------------+------------------------------------------------------+
 | **Name**      | **Role**       | **Office Hours**                                     |
 +---------------+----------------+------------------------------------------------------+
-| Kat Husar     | Head TA\       | Tue 1:30 - 3:30pm, TBD                               |
+| Kat Husar     | Head TA\       | Tue 1:30 - 3:30pm, Old Chem 220                               |
 |               | Lab 02L leader |                                                      |
 +---------------+----------------+------------------------------------------------------+
 | Jon Campbell  | Lab 01L leader | Tue & Thu 9 - 10am, Old Chem 025                     |
