update office hours.

--- a/overview.qmd
+++ b/overview.qmd
@@ -40,18 +40,18 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 ## Teaching assistants
 
-+---------------+----------------+------------------------------------------------------+
-| **Name**      | **Role**       | **Office Hours**                                     |
-+---------------+----------------+------------------------------------------------------+
-| Kat Husar     | Head TA\       | Tue 1:30 - 3:30pm, Old Chem 220                               |
-|               | Lab 02L leader |                                                      |
-+---------------+----------------+------------------------------------------------------+
-| Jon Campbell  | Lab 01L leader | Tue & Thu 9 - 10am, Old Chem 025                     |
-+---------------+----------------+------------------------------------------------------+
-| Ishrit Gupta  | Lab 01L helper | Fri 1- 3pm, Old Chem 203B                            |
-+---------------+----------------+------------------------------------------------------+
-| Alan Wang     | Lab 02L helper | Mon & Wed 10 - 11am, Old Chem 203B                   |
-+---------------+----------------+------------------------------------------------------+
++--------------+----------------+------------------------------------+-----------+
+| **Name**     | **Role**       | **Office Hours**                   |           |
++--------------+----------------+------------------------------------+-----------+
+| Kat Husar    | Head TA\       | Tue 1:30 - 3:30pm, Old Chem 220    |           |
+|              | Lab 02L leader |                                    |           |
++--------------+----------------+------------------------------------+-----------+
+| Jon Campbell | Lab 01L leader | Tue & Thu 9 - 10am, Old Chem 025   |           |
++--------------+----------------+------------------------------------+-----------+
+| Ishrit Gupta | Lab 01L helper | Fri 1- 3pm, Old Chem 203B          |           |
++--------------+----------------+------------------------------------+-----------+
+| Alan Wang    | Lab 02L helper | Mon & Wed 10 - 11am, Old Chem 203B |           |
++--------------+----------------+------------------------------------+-----------+
 
 # License
 
