--- a/ae/ae-01-slr.qmd
+++ b/ae/ae-01-slr.qmd
@@ -3,6 +3,10 @@ title: "AE 01: Simple linear regression "
 subtitle: "Houses in Duke Forest"
 date: "Sep 3, 2024"
 editor: visual
+toc: true
+execute: 
+  message: false
+  warning: false
 ---
 
 ::: callout-important
@@ -10,14 +14,14 @@ Go to the [course GitHub organization](https://github.com/sta221-fa24) and locat
 
 Render, commit, and push your responses to GitHub by the end of class to submit your AE.\
 \
-**This AE will not count towards your participation grade**
+**This AE will not count towards your participation grade.**
 :::
 
 ```{r}
 #| label: load-packages
 #| message: false
 
-library(tidyverse)  
+library(tidyverse)    # data wrangling and visualization
 library(tidymodels)   # broom and yardstick package
 library(openintro)    # duke_forest dataset
 library(knitr)        # format output
@@ -25,7 +29,7 @@ library(scales)       # format plot axes
 library(skimr)        # quickly calculate summary statistics
 ```
 
-## Data
+# Data
 
 The data are on houses that were sold in the Duke Forest neighborhood of Durham, NC around November 2020. It was originally scraped from Zillow, and can be found in the `duke_forest` data set in the **openintro** R package.
 
@@ -35,7 +39,7 @@ We will focus on two variables:
 
 -   `price`: Sale price in US Dollars (USD)
 
-The goal of this analysis is to use the square feet of a home to understand variability in the price.
+The goal of this analysis is to use the area to understand variability in the price of homes in Duke Forest.
 
 ```{r}
 #| label: glimpse-data
@@ -43,9 +47,9 @@ The goal of this analysis is to use the square feet of a home to understand vari
 glimpse(duke_forest)
 ```
 
-## Exploratory data analysis
+# Exploratory data analysis
 
-Let's begin by examining the univariate distributions of the variables of interest. The code to visualize and calculate summary statistics for `price` is below.
+Let's begin by examining the univariate distributions of the price and area. The code to visualize and calculate summary statistics for `price` is below.
 
 ```{r}
 #| label: price-viz
@@ -66,19 +70,13 @@ duke_forest |>
   kable(digits = 3)
 ```
 
-::: callout-note
 ## Exercise 1
 
 What are 1 - 2 observations about the distribution of `price`?
-:::
 
-\[Add response here\]
-
-::: callout-note
 ## Exercise 2
 
 Visualize the distribution of `area` and calculate summary statistics.
-:::
 
 ```{r}
 #| label: ex2-area-viz
@@ -94,19 +92,13 @@ Visualize the distribution of `area` and calculate summary statistics.
 
 ```
 
-::: callout-note
 ## Exercise 3
 
 What are 1 - 2 observations about the distribution of `area`?
-:::
 
-\[Add response here\]
-
-::: callout-note
 ## Exercise 4
 
 Fill in the code to visualize the relationship between `price` and `area`. What are 1 - 2 observations about the relationship between these two variables?
-:::
 
 ::: callout-important
 Remove `#|eval: false` after you have filled in the code!
@@ -126,7 +118,8 @@ ggplot(duke_forest, aes(x = ____, y = ____)) +
   scale_y_continuous(labels = label_dollar()) 
 ```
 
-::: callout-note
+# Regression model
+
 ## Exercise 5
 
 You want to fit a model of the form
@@ -135,18 +128,13 @@ $$
 price = \beta_0 + \beta_1 ~ area + \epsilon, \hspace{5mm} \epsilon \sim N(0, \sigma^2_\epsilon)
 $$
 
-Woud this model be a reasonable fit for the data? Why or why not?
-:::
+Would a model of this form be a reasonable fit for the data? Why or why not?
 
-\[Add response here\]
-
-::: callout-note
 ## Exercise 6
 
 Fit the linear model described in the previous exercise and neatly display the output.
 
 See [notes](https://sta221-fa24.netlify.app/slides/02-slr#/linear-regression-in-r) for example code.
-:::
 
 ```{r}
 #| label: fit-model
@@ -155,21 +143,19 @@ See [notes](https://sta221-fa24.netlify.app/slides/02-slr#/linear-regression-in-
 
 ```
 
-::: callout-note
 ## Exercise 7
 
-interpret the slope in the context of the data.
-:::
+-   Interpret the slope in the context of the data.
 
-\[Add response here\]
+-   Interpret the slope in terms of area increasing by 100 sqft.
 
-::: callout-note
+-   Which interpretation do you think is more meaningful in practice?
+
 ## Exercise 8
 
 Does it make sense to interpret the intercept? If so, interpret it in the context of the data. Otherwise, explain why not.
-:::
 
-\[Add response here\]
+# Submission
 
 ::: callout-important
 To submit the AE:
