--- a/slides/04-slr-matrix.qmd
+++ b/slides/04-slr-matrix.qmd
@@ -46,15 +46,14 @@ knitr::opts_chunk$set(
 -   Matrix representation for simple linear regression
     -   Model from
     -   Least square estimate
-    -   Fitted (predicted) values
+    -   Predicted (fitted) values
     -   Residuals
 -   Matrix representation in R
 
-## Computing set up
-
 ```{r packages}
-#| echo: true
+#| echo: false
 #| message: false
+#| warning: false
 
 # load packages
 library(tidyverse)   # for data wrangling and visualization
@@ -68,7 +67,7 @@ library(patchwork)   # arrange plots
 ggplot2::theme_set(ggplot2::theme_bw())
 ```
 
-# Matrix form for simple linear regression
+# Matrix representation of simple linear regression
 
 ## SLR: Statistical model (population)
 
@@ -147,6 +146,33 @@ $$
 We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
 \begin{aligned}
 \mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
+\end{aligned}
+$$
+
+## Minimize sum of squared residuals
+
+We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
+\begin{aligned}
+\mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
+&= (\mathbf{y}^T - \boldsymbol{\beta}^T\mathbf{X}^T)(\mathbf{y} - \mathbf{X}\boldsymbol{\beta})\\[10pt]
+\end{aligned}
+$$
+
+## Minimize sum of squared residuals
+
+We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
+\begin{aligned}
+\mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
+&= (\mathbf{y}^T - \boldsymbol{\beta}^T\mathbf{X}^T)(\mathbf{y} - \mathbf{X}\boldsymbol{\beta})\\[10pt]
+&=\mathbf{y}^T\mathbf{y} - \mathbf{y}^T\mathbf{X}\boldsymbol{\beta} - \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y} + \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{X}\boldsymbol{\beta}\\[10pt]
+\end{aligned}
+$$
+
+## Minimize sum of squared residuals
+
+We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
+\begin{aligned}
+\mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
 &= (\mathbf{y}^T - \boldsymbol{\beta}^T\mathbf{X}^T)(\mathbf{y} - \mathbf{X}\boldsymbol{\beta})\\[10pt]
 &=\mathbf{y}^T\mathbf{y} - \mathbf{y}^T\mathbf{X}\boldsymbol{\beta} - \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y} + \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{X}\boldsymbol{\beta}\\[10pt]
 &=\mathbf{y}^T\mathbf{y} - 2\boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y} + \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{X}\boldsymbol{\beta}
@@ -177,7 +203,9 @@ $$
 \color{#993399}{\hat{\boldsymbol{\beta}} = (\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{y}}
 $$
 
-## Matrix form in R
+# Matrix representation in R
+
+## Obtain $\mathbf{y}$ vector
 
 Let's go back to the Duke Forest data. We want to use the matrix representation to fit a model of the form:
 
@@ -201,7 +229,7 @@ Let's look at the first 10 observations of $y$
 y[1:10]
 ```
 
-## Matrix form in R
+## Obtain $\mathbf{X}$ matrix
 
 Use the `model.matrix()` function to get $\mathbf{X}$
 
@@ -217,15 +245,13 @@ Let's look at the first 10 rows of $\mathbf{X}$
 X[1:10,]
 ```
 
-## Matrix form in R
+## Calculate $\hat{\boldsymbol{\beta}}$ 
 
 Matrix functions in R. Let $\mathbf{A}$ and $\mathbf{B}$ be matrices
 
 -   `t(A)`: transpose $\mathbf{A}$
-
--   `A %*% B`: multiply $\mathbf{A}$ and $\mathbf{B}$
-
 -   `solve(A)`: inverse of $\mathbf{A}$
+-   `A %*% B`: multiply $\mathbf{A}$ and $\mathbf{B}$
 
 . . .
 
@@ -251,8 +277,57 @@ tidy(duke_forest_model) |> kable(digits = 3)
 beta_hat 
 ```
 
+# Predicted values and residuals
+
+## Predicted (fitted) values
+
+Now that we have $\hat{\boldsymbol{\beta}}$, let's predict values of $\mathbf{y}$ using the model
+
+$$
+\hat{\mathbf{y}} = \mathbf{X}\hat{\boldsymbol{\beta}} = \underbrace{\mathbf{X}(\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T}_{\mathbf{H}}\mathbf{y} = \mathbf{H}\mathbf{y}
+$$
+
+. . .
+
+**Hat matrix**: $\mathbf{H} = \mathbf{X}(\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T$
+
+-   $\mathbf{H}$ is an $n\times n$ matrix
+
+```{=html}
+<!-- -->
+```
+-   Maps vector of observed values $\mathbf{y}$ to a vector of fitted values $\hat{\mathbf{y}}$
+
+## Residuals
+
+Recall that the residuals are the difference between the observed and predicted values
+
+$$
+\begin{aligned}
+\mathbf{e} &= \mathbf{y} - \hat{\mathbf{y}}\\[10pt]
+& = \mathbf{y} - \mathbf{X}\hat{\boldsymbol{\beta}} \\[10pt]
+& = \mathbf{y} - \mathbf{H}\mathbf{y} \\[10pt]
+& = (\mathbf{I} - \mathbf{H})\mathbf{y}
+\end{aligned}
+$$
+
+. . .
+
+$$
+\color{#993399}{\mathbf{e} = (\mathbf{I} - \mathbf{H})\mathbf{y}}
+$$
+
 ## Recap
 
--   Evaluated models using RMSE and $R^2$
+-   Introduced matrix representation for simple linear regression
+    -   Model from
+    -   Least square estimate
+    -   Predicted (fitted) values
+    -   Residuals
+-   Used R for matrix calculations
 
--   Used analysis of variance to partition variability in the response variable
+## Next class
+
+-   Multiple linear regression
+
+-   See [Sep 10 prepare](../prepare/prepare-sep10.html)
